# goosefoot-elmer-modules

./: .cproject  .gitignore  .project  .vimrc  CMakeLists.txt  CODE-RELEASE  ELMER-LICENSES  LICENSE  README  README.md  index.html  mkdocs.yml  octave-workspace  prefix_files  search.html  sitemap.xml  trilinos_include.patch
dockerlaunch/: CMakeLists.txt  README  create-unix.sh  setup.py.in
dockerlaunch/dockerlaunch/: app.py  handler.py  layer.py  main.py  server.py  utils.py
dockerlaunch/examples/: submit.py
dockerlaunch/scripts/: dockerlaunchd
dockerlaunch/utils/: dockerlaunch-clean.sh
gssa/: CMakeLists.txt  setup.py.in  setup2.py.in
gssa/scripts/: go-smart-comparator  go-smart-simulation-client  go-smart-simulation-server
gssa/scripts2/: go-smart-preprocessor
gssa/src/gssa/: client.py  config.py  database.py  definition.py  docker.py  error.py  family.py  http_transferrer.py  parameters.py  server.py  sftp_transferrer.py  shadow_watcher.py  tmp_transferrer.py  transferrer.py  translator.py
gssa/src/gssa/.crossbar/: config.json
gssa/src/gssa/families/: __init__.py  docker.py  elmer_libnuma.py  fenics.py  g.py  mesher_gssf.py
gssa/src/gssf/: component.py  elmer_powerovertime.py  elmergrid.py  errors.py  globals.py  gssf.py  logger.py  mesh_optimizer.py  mesher.py  mesher_3d_cgal.py  needlelibrary_interface.py  utils.py  validation.py
gssa/src/gssf/comparator/: parse.py  simulation_definition.py
gssa/src/gssf/data/: go-smart-probe-location-template.txt
gssa/src/gssf/data/elmer_modules/: mwa_RelPerm.f90
gssa/src/gssf/data/templates/: go-smart-axisymm_microsulis-mwa_needleless.geo  go-smart-template_ps-oldelmer.sif  inner-microsulis-mwa-coarse.xml
gssa/src/gssf2/: config.py
gssa/src/gssf2/data/needles/FreeCAD/: cryo-two-part-cylinder-1.fcstd  cryo-two-part-cylinder-1.fcstd1  cryo-two-part-cylinder-short-1.fcstd  ire-two-cylinder-1cm.fcstd1
gssa/src/gssf2/data/needles/STEP/: cryo-cylinder-1.step  cryo-cylinder-1.step.inactive  cryo-two-cylinder-1.step  cryo-two-part-cylinder-1.step  (+2 more)
gssa/src/gssf2/needlelibrary/: cuboidbuilder.py  manipulator.py  spherebuilder.py
gssa/tests/: test_comparator.py  test_rfa_solver.py
launcher/: CMakeLists.txt  setup.py.in  setup2.py.in
launcher/scripts/: go-smart-comparator  go-smart-launcher  go-smart-simulation-client  go-smart-simulation-server
launcher/scripts2/: go-smart-needle-library  go-smart-preprocessor
launcher/src/gosmart/: config.py
launcher/src/gosmart/comparator/: comparator.py  simulation_definition.py
launcher/src/gosmart/data/: go-smart-power-over-time.txt
launcher/src/gosmart/data/constants/: constants-default.xml  constants-variant-cryoablation.xml  constants-variant-rfa_joule_heating.xml  constants-variant-rfa_point_sources.xml
launcher/src/gosmart/data/elmer_modules/: mwa_ElecCond.f90  mwa_PowerOverTime.f90
launcher/src/gosmart/data/templates/: go-smart-axisymm_basic-mwa.geo  go-smart-axisymm_basic-mwa_needleless.geo  go-smart-axisymm_microsulis-mwa.geo  go-smart-template.sif  go-smart-template_cryo.sif  go-smart-template_ire.sif  go-smart-template_mwa-nl.sif  go-smart-template_mwa.sif  go-smart-template_ps-modbioheat.sif  inner-basic-mwa-coarse.xml  inner-basic-mwa.xml  inner-microsulis-mwa.xml
launcher/src/gosmart/launcher/: component.py  elmer.py  elmer_powerovertime.py  elmer_probelocation.py  elmergrid.py  errors.py  globals.py  gosmart.py  lesion.py  logger.py  logger_observant.py  logger_vigilant.py  mesh_optimizer.py  mesher.py  mesher_axisymmetric.py  mesher_cgal.py  needlelibrary_interface.py  preprocessor.py  utils.py  validation.py
launcher/src/gosmart/server/: client.py  database.py  definition.py  docker.py  error.py  family.py  http_transferrer.py  parameters.py  server.py  sftp_transferrer.py  shadow_watcher.py  tmp_transferrer.py  transferrer.py  translator.py
launcher/src/gosmart/server/.crossbar/: config.json
launcher/src/gosmart/server/families/: __init__.py  docker.py  elmer_libnuma.py  fenics.py  g.py  galilfoam.py  gssf_arguments.py  mesher_gssf.py
launcher/src/gosmart2/: config.py
launcher/src/gosmart2/data/needles/: Mesh.stl  basic-cylinder.fcstd  sphere.stl
launcher/src/gosmart2/needlelibrary/: config.py  cuboidbuilder.py  extentbuilder.py  manipulator.py  needlelibrary.py  spherebuilder.py
launcher/src/gosmart2/preprocessor/: preprocessor.py
launcher/tests/: test_comparator.py  test_mesher.py  vtk-analysis.py
lesion/: CMakeLists.txt  go-smart-lesion.cpp  go-smart-segmented-lesion-cleaner.cpp
numa-elmer/: CMakeLists.txt
numa-elmer/NUMAAlternating/: AlternatingBCSolver.f90
numa-elmer/NumaCellState/: CMakeLists.txt  NumaCellState.f90
numa-elmer/NumaHeatSolver/: AdditionalComputations.f90  AssemblyNeumann.f90  CMakeLists.txt  ErrorCompute.f90  GapTemperature.f90  NumaSetElementValues.f90  TemperatureEdgeResidual.f90  TotalPowerCompose.f90
numa-elmer/NumaIRE/: AlternatingBCSolver.f90  AlternatingBoundaries.f90  CoverageCurveOutputSolver.f90  ElectricConductivity.f90  MaxESolver.f90
numa-elmer/NumaInitBoundaryConditions/: CMakeLists.txt  NumaInitBoundaryConditions.f90
numa-elmer/NumaInitBoundaryConditions_gs/: CMakeLists.txt  NumaForceTerm.f90  NumaReadPerfusionMap.f90
numa-elmer/NumaLegacyHeatSolver/: CMakeLists.txt  NumaHeatSolve.f90
numa-elmer/NumaLesion/: CMakeLists.txt  LesionExtraction.f90
numa-elmer/NumaPowerField/: NumaPowerCheck.f90  NumaPowerField.f90
numa-elmer/NumaPowerGenerator/: NumaElectricTips.f90  NumaPowerGenerator.f90  NumaReadElectricPower.f90
numa-elmer/NumaProgress/: CMakeLists.txt  NumaProgress.f90  err.c
numa-elmer/NumaTM/: CMakeLists.txt  Transform.f90
numa-elmer/OptimizedHeatSolver/: HeatAddGlobalTime.f90  HeatAddHeatFlux.f90  HeatAssemblyBulk.f90  HeatBoundaryResidual.f90  HeatEdgeResidual.f90  HeatFindGapIndexes.f90  HeatIncorporateCells.f90  HeatInsideResidual.f90  HeatPhaseDefs.f90  HeatSolve.f90  HeatSolveSystem.f90
surfaceDeviation/: CMakeLists.txt  distance-ave.cpp  distance.cpp  extractlesion.py  extractlesionperipheral.py  install_manifest.txt  surface-deviation
(+249 files in other folders)
