include_directories(${CMAKE_INSTALL_PREFIX}/include/elmer/f90)

add_subdirectory(NumaHeatSolver)
add_subdirectory(OptimizedHeatSolver)
add_subdirectory(NumaInitBoundaryConditions)
add_subdirectory(NumaInitBoundaryConditions_gs)
add_subdirectory(NumaCellState)
add_subdirectory(NumaIRE)
add_subdirectory(NUMAAlternating)
add_subdirectory(NUMALesion)
add_subdirectory(NumaLegacyCellState)
add_subdirectory(NumaLegacyHeatSolver)
add_subdirectory(NumaPowerGenerator)
add_subdirectory(NumaProgress)
